typescript/checker/tests/conformance/types/tuple/wideningTuples4.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            88,
        ),
        hi: BytePos(
            89,
        ),
        ctxt: #0,
    },
    left: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    70,
                ),
                hi: BytePos(
                    75,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                71,
                            ),
                            hi: BytePos(
                                74,
                            ),
                            ctxt: #0,
                        },
                        kind: TsAnyKeyword,
                    },
                ),
            ],
        },
    ),
    right: Tuple(
        Tuple {
            span: Span {
                lo: BytePos(
                    92,
                ),
                hi: BytePos(
                    109,
                ),
                ctxt: #0,
            },
            types: [
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                93,
                            ),
                            hi: BytePos(
                                102,
                            ),
                            ctxt: #0,
                        },
                        kind: TsAnyKeyword,
                    },
                ),
                Keyword(
                    TsKeywordType {
                        span: Span {
                            lo: BytePos(
                                104,
                            ),
                            hi: BytePos(
                                108,
                            ),
                            ctxt: #0,
                        },
                        kind: TsAnyKeyword,
                    },
                ),
            ],
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/tuple/wideningTuples4.ts:3:9
  |
3 | var b = a = [undefined, null];
  |         ^

